rename the files to follow standards

--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 <div class="sidebar">
   <h4 style=" padding:15px;
   font-size: 18px;">DASHBOARD</h4>
-  <a href="project.html">HOME</a>
+  <a href="index.html">HOME</a>
   <a href="cold.html">COLD</a>
   <a href="cough.html">COUGH</a>
   <a href="headache.html">HEADACHE</a>
   <a href="fever.html">FEVER</a>
-  <a href="stomach ache.html">STOMACH ACHE</a>
-  <a href="body ache.html">BODY ACHE</a>
-  <a href="minor wounds.html">MINOR WOUNDS</a>
+  <a href="stomach_ache.html">STOMACH ACHE</a>
+  <a href="body_ache.html">BODY ACHE</a>
+  <a href="minor_wounds.html">MINOR WOUNDS</a>
   <a href="hairfall.html">HAIRFALL</a>
-  <a href="muscle cramps.html">MUSCLE CRAMPS</a>
+  <a href="muscle_cramps.html">MUSCLE CRAMPS</a>
 </div>
 
 <div class="Benefits">
